<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView_f_id"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:text="@string/textView_f_id" />

        <TextView
            android:id="@+id/textView_f_lname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:text="@string/textView_f_lname" />

        <TextView
            android:id="@+id/textView_f_fname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:text="@string/textView_f_fname" />

        <TextView
            android:id="@+id/textView_f_salary"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:text="@string/textView_f_salary" />

        <TextView
            android:id="@+id/textView_f_bonus"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:text="@string/textView_f_bonus" />

        <TextView
            android:id="@+id/textView_calcBonus"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:text="@string/textView_calcBonus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_prev_faculty"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/button_prev_faculty" />

        <Button
            android:id="@+id/button_next_faculty"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/button_next_faculty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button_faculty_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_faculty_details" />

        <Button
            android:id="@+id/button_all_faculties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_all_faculties" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>